Resolve remaining errors, Finish setting up Junit tests. Use version of Jsonic compatable with Java 17.